corrected federated log_id
