# crates/server/src/datastore/memory.rs
@@ -482,7 +482,8 @@ impl DataStore for MemoryDataStore {
             .take_while(|entry| entry.registry_index < registry_log_length)
             .map(|entry| PublishedProtoEnvelope {
                 envelope: entry.record_content.clone(),
-                registry: None,
+                federated: None,
+                federated_log_id: None,
                 registry_index: entry.registry_index,
             })
             .take(limit as usize)
@@ -522,7 +523,8 @@ impl DataStore for MemoryDataStore {
             .take_while(|entry| entry.registry_index < registry_log_length)
             .map(|entry| PublishedProtoEnvelope {
                 envelope: entry.record_content.clone(),
-                registry: None,
+                federated: None,
+                federated_log_id: None,
                 registry_index: entry.registry_index,
             })
             .take(limit as usize)
